# tools

./: .gitignore  README.md
modules/python/: pyproject.toml  requirements.txt
modules/python/data/: histo1_data.csv  histo1_statistics.csv  histo2_data.csv  histo2_statistics.csv  histo3_data.csv  histo3_statistics.csv
modules/python/src/data_generation/: __init__.py  __main__.py  data_generation.py  data_generation_example.py  data_generation_example2.py  data_transformation_helpers.py  format_helpers.py  generators.py  selectors_helpers.py
modules/python/src/grid_generator/: __init__.py  __main__.py  color.py  grid.py  grid_drawing_tool.py  grid_generator_bin.py  orientation.py  shape_creator.py  shapes.py  symbols.py
modules/python/src/grid_generator/exporters/: __init__.py  exporter.py  svg_exporter.py
modules/python/src/grid_generator/samples/: sh1-p1.txt  sh1-p2.txt  sh1-p3.txt  sh2-p1.txt  sh2-p2.txt  sh2-p3.txt
modules/python/src/plot_layout/: __init__.py  __main__.py  plot.py  plot_configuration.py  plot_layout.py  plot_layout_example.py
modules/python/src/solo/: gitlab_extract.py
modules/python/test/data_generation_tests/: dict_selectors_helpers_test.py  generators_test.py
modules/python/test/grid_generator_tests/: color_test.py
modules/python/test/plot_layout_tests/: plot_layout_test.py
