[project]
name = 'pythontools'
description = 'Some python tools'
version = "1.0"
dynamic = ["version"]
authors = [
    {name = "Sylvain Domenjoud", email = "s.domenjoud@cgi.com"},
]
maintainers = [
    {name = "Sylvain Domenjoud", email = "s.domenjoud@cgi.com"},
]
dependencies = []
requires-python = ">= 3.11"

[projects.urls]
Homepage = ""

[projects.scripts]
data-generation = "examples/data_generation_example:main"
plot-layout = "examples/plot_layout_example:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = 'test'
# Log
log_cli = true
log_level = 'INFO'
log_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_date_format = '%Y-%m-%d %H:%M:%S'
pythonpath = "src"
